# seislib

./: .gitignore  .readthedocs.yaml  1_Adaptative_grid_tomo.ipynb  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  installation.sh  pyproject.toml  setup.py  setup_test.py  sw_tomography.ipynb  tomography_test.pyx
docs/: environment.yaml  requirements.txt
docs/source/: api.rst  changelog.rst  cite.rst  conf.py  index.rst  installation.rst  licence.rst  refs.bib  requirements.txt  seislib.an.rst  seislib.colormaps.rst  seislib.eq.rst  seislib.eq_downloader.rst  seislib.eq_tsm.rst  seislib.eq_velocity.rst  seislib.plotting.rst  seislib.tomography.rst  seislib.utils.rst  usage.rst
docs/source/_templates/: module_functions_template.rst
seislib/: __init__.py  __version__.py
seislib/an/: MassDownloader_AN.py  __init__.py  _an_attenuation.py  _an_downloader.py  _an_processing.py  _an_velocity.py  an_attenuation.py  an_downloader.py  an_processing.py  an_velocity.py
seislib/clib/: __init__.py  _math.c  _math.pxd  _math.pyx  _spherical_geometry.cpp  _spherical_geometry.pyx  _tomography.cpp  _tomography.pyx  setup_all.py
seislib/colormaps/: __init__.py
seislib/eq/: MassDownloader_EQ.py  __init__.py  _eq_downloader.py  _eq_velocity.py  eq_downloader.py  eq_velocity.py
seislib/exceptions/: __init__.py  _exceptions.py
seislib/plotting/: __init__.py  _plotting.py  plotting.py
seislib/tomography/: __init__.py  _grid.py  _tomography.py  grid.py  tomography.py
seislib/utils/: __init__.py  _utils.py  utils.py
tests/: test_numpy_compat.py
(+156 files in other folders)
