[build-system]
# Minimum requirements for the build system to execute.
# see PEP518: https://www.python.org/dev/peps/pep-0518/
requires = [
    'setuptools'
    ]
build-backend = "setuptools.build_meta"

[project]
name = "seislib"
authors = [{name = "Fabrizio Magrini", email = "fabrizio.magrini90@gmail.com"}]
dynamic = ["version", "description"]
